apps/torrents/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  template:
    spec:
      serviceAccountName: jellyfin
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        supplementalGroups:
          - 44 # video group
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
            limits:
              cpu: 8000m
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: dri
          hostPath:
            path: /dev/dri
