apps/torrents/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
