apps/torrents/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - jellyfin.homie.e10n.me
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: torrents
          port: 80
